@@ -1,9 +1,10 @@
 <ul>
 	<li>V0.9.3 Devel
   	<ul>
-	    <li>2003-09-09 AP - fix grid for tables with multicolumn pk
+		<li>2003-09-09 HS - Fix for casts with created WITHOUT FUNCTION (binary compatible).
+		<li>2003-09-09 AP - fix grid for tables with multicolumn pk
 		<li>2003-09-08 HS - Don't crash when selecting SQL command help when not connected to a server
-	    <li>2003-09-08 AP - update query tool toolbar after clipboard cut/copy
+		<li>2003-09-08 AP - update query tool toolbar after clipboard cut/copy
 		<li>2003-09-08 AP - fix trigger dialog for multiple events
 		<li>2003-09-08 AP - export and option dialog partially bigger
 		<li>2003-09-06 AP - missed some strings for translation
